--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
         <p>*Formatos de archivos soportados: .pdf, .png, .jpg, .jpeg, .svg, .gif, .webp, .bmp, .tif, .jfif</p>
         <p>*Nombrar los documentos a procesar en mayúsculas/minúsculas no afecta el funcionamiento del programa.</p>
         <p>*Otras páginas nuevas dentro del "affidavit" las guardará como "(unidentified document)".</p>
-        <p>*Si por error de la aplicación no reconoce una página, también lo guardará como "(unidentified document)".</p>
+        <p>*Si por error de la aplicación no reconoce una página, también lo guardará como "(unidentified document)", pero en ningún caso el programa omitirá guardar página(s) no reconocida(s) contenida(s) en el "affidavit".</p>
         <p>*Cualquier página no reconocida, se guardará con la certifición de firmas incluida.</p>
-        <p>*En ningún caso el programa omitirá guardar página(s) no reconocida(s) contenida(s) en el "affidavit".</p>
         <p></p>
     </div>
     <script src="assets/script.js"></script>
