--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="rgb(50,50,50)">
     <title>DeskPy - Docs</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Josefin+Sans:wght@200;400;600&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="icon.png">
+    <link rel="icon" type="image/png" href="media/icon.png">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
@@ -15,28 +15,32 @@
         <h1>DeskPy - Documentación</h1>
         <h2>Nombre del producto: SMART</h2>
         <h3>Instalación.</h3>
-        <p>a. Software de distribución libre y "portable" (no requiere instalación), enlace de descarga: LINK.</p>
-        <p>b. Por políticas de seguridad del sistema operativo de Windows, al ser un archivo ejecutable, al descargar y ejecutar directamente puede generar la alerta de "Software malicioso", seleccionar la opción de "más información" y "ejecutar de todas formas".</p>
+        <div class="h3-foo">
+            <p>a. Software de distribución libre y "portable" (no requiere instalación), enlace de descarga: LINK.</p>
+            <p>b. Por políticas de seguridad del sistema operativo de Windows, al ser un archivo ejecutable, al descargar y ejecutar directamente puede generar la alerta de "Software malicioso", seleccionar la opción de "más información" y "ejecutar de todas formas".</p>
+        </div>
         <h3>Configuración.</h3>
-        <p>a. Ejecutar el software o aplicación.</p>
-        <p>b. Establecer el directorio de trabajo (carpeta con una o más subcarpetas) con los documentos y nombres claves definidos.</p>
-        <p>Ejemplo:</p>
-        <img src="media/sample-1.png" alt="sample-1.png">
-        <p>c. En la ventana inferior se mostrarán en pantalla 3 avisos:</p>
-        <ul>
-            <li>Directorio configurado correctamente.</li>
-            <li>Directorio escaneado correctamente.</li>
-            <li>Cantidad de expedientes (sub-carpetas dentro del directorio seleccionado) a procesar.</li>
-        </ul>
-        <p>Ejemplo:</p>
-        <img src="media/sample-2.png" alt="sample-2.png">
-        <p>c. Una vez configurado el directorio el usuario puede escanear los datos en un expediente pulsando "Leer", la aplicación leerá el documento designado para tomar los datos correspondientes y rellenar los campos requeridos de forma automática.</p>
-        <p>Ejemplo:</p>
-        <img src="media/sample-3.png" alt="sample-3.png">
-        <p>*El usuario puede validar los datos en los campos y puede modificarlos si así lo requiere.</p>
-        <p>*Los botones al lado de cada campo de texto permiten borrar el texto completo.</p>
-        <p>*También puede configurar la ruta o directorio de trabajo y pulsar "Auto". Esta opción no permite verificar los datos uno a uno pero hace el proceso más rápido y sencillo, ya que procesa un expediente tras otro hasta completar todos.</p>
-        <p>*En la pantalla negra se reportan uno a uno los pasos así como los expedientes trabajados.</p>
+        <div class="h3-foo">
+            <p>a. Ejecutar el software o aplicación.</p>
+            <p>b. Establecer el directorio de trabajo (carpeta con una o más subcarpetas) con los documentos y nombres claves definidos.</p>
+            <p>Ejemplo:</p>
+            <img src="media/sample-1.png" alt="sample-1.png">
+            <p>c. En la ventana inferior se mostrarán en pantalla 3 avisos:</p>
+            <ul>
+                <li>Directorio configurado correctamente.</li>
+                <li>Directorio escaneado correctamente.</li>
+                <li>Cantidad de expedientes (sub-carpetas dentro del directorio seleccionado) a procesar.</li>
+            </ul>
+            <p>Ejemplo:</p>
+            <img src="media/sample-2.png" alt="sample-2.png">
+            <p>c. Una vez configurado el directorio el usuario puede escanear los datos en un expediente pulsando "Leer", la aplicación leerá el documento designado para tomar los datos correspondientes y rellenar los campos requeridos de forma automática.</p>
+            <p>Ejemplo:</p>
+            <img src="media/sample-3.png" alt="sample-3.png">
+            <p>*El usuario puede validar los datos en los campos y puede modificarlos si así lo requiere.</p>
+            <p>*Los botones al lado de cada campo de texto permiten borrar el texto completo.</p>
+            <p>*También puede configurar la ruta o directorio de trabajo y pulsar "Auto". Esta opción no permite verificar los datos uno a uno pero hace el proceso más rápido y sencillo, ya que procesa un expediente tras otro hasta completar todos.</p>
+            <p>*En la pantalla negra se reportan uno a uno los pasos así como los expedientes trabajados.</p>
+        </div>
         <h3>Manipulación de documentos.</h3>
         <p>a. Nombres clave:</p>
         <p>Entrada / Salida</p>
@@ -53,7 +57,15 @@
         <p>*Otras páginas nuevas dentro del "affidavit" las guardará como "(unidentified document)".</p>
         <p>*Si por error de la aplicación no reconoce una página, también lo guardará como "(unidentified document)", pero en ningún caso el programa omitirá guardar página(s) no reconocida(s) contenida(s) en el "affidavit".</p>
         <p>*Cualquier página no reconocida, se guardará con la certifición de firmas incluida.</p>
-        <p></p>
+        <h3>Barra de herramientas</h3>
+        <p>Ejemplo:</p>
+        <img src="media/sample-4.png" alt="sample-4.png">
+        <p>El usuario dispone de las herramientas:</p>
+        <ul>
+            <li>Documentación</li>
+            <li>Buscar actualizaciones.</li>
+            <li>Ir al directorio de trabajo.</li>
+        </ul>
     </div>
     <script src="assets/script.js"></script>
 </body>
