--- a/index.html
+++ b/index.html
@@ -42,30 +42,34 @@
             <p>*En la pantalla negra se reportan uno a uno los pasos así como los expedientes trabajados.</p>
         </div>
         <h3>Manipulación de documentos.</h3>
-        <p>a. Nombres clave:</p>
-        <p>Entrada / Salida</p>
-        <ul>
-            <li>Affidavit → KIT</li>
-            <li>Firma → FIRMA REPRESENTANTE LEGAL</li>
-            <li>Buró (buro / gente) → BURÓ</li>
-            <li>Orden1, orden2 [img/pdf] → ORDEN PATRONAL 1, 2, 3... (pdf)</li>
-            <li>Origen, origen2 [img/pdf] → ORIGEN DE FONDOS 1, 2, 3... (pdf)</li>
-            <li>id1 + id2 [img/pdf] → ID (pdf) y ID CARA 1 / ID CARA 2 (img)</li>
-        </ul>
-        <p>*Formatos de archivos soportados: .pdf, .png, .jpg, .jpeg, .svg, .gif, .webp, .bmp, .tif, .jfif</p>
-        <p>*Nombrar los documentos a procesar en mayúsculas/minúsculas no afecta el funcionamiento del programa.</p>
-        <p>*Otras páginas nuevas dentro del "affidavit" las guardará como "(unidentified document)".</p>
-        <p>*Si por error de la aplicación no reconoce una página, también lo guardará como "(unidentified document)", pero en ningún caso el programa omitirá guardar página(s) no reconocida(s) contenida(s) en el "affidavit".</p>
-        <p>*Cualquier página no reconocida, se guardará con la certifición de firmas incluida.</p>
+        <div class="h3-foo">
+            <p>a. Nombres clave:</p>
+            <p>Entrada / Salida</p>
+            <ul>
+                <li>Affidavit → KIT</li>
+                <li>Firma → FIRMA REPRESENTANTE LEGAL</li>
+                <li>Buró (buro / gente) → BURÓ</li>
+                <li>Orden1, orden2 [img/pdf] → ORDEN PATRONAL 1, 2, 3... (pdf)</li>
+                <li>Origen, origen2 [img/pdf] → ORIGEN DE FONDOS 1, 2, 3... (pdf)</li>
+                <li>id1 + id2 [img/pdf] → ID (pdf) y ID CARA 1 / ID CARA 2 (img)</li>
+            </ul>
+            <p>*Formatos de archivos soportados: .pdf, .png, .jpg, .jpeg, .svg, .gif, .webp, .bmp, .tif, .jfif</p>
+            <p>*Nombrar los documentos a procesar en mayúsculas/minúsculas no afecta el funcionamiento del programa.</p>
+            <p>*Otras páginas nuevas dentro del "affidavit" las guardará como "(unidentified document)".</p>
+            <p>*Si por error de la aplicación no reconoce una página, también lo guardará como "(unidentified document)", pero en ningún caso el programa omitirá guardar página(s) no reconocida(s) contenida(s) en el "affidavit".</p>
+            <p>*Cualquier página no reconocida, se guardará con la certifición de firmas incluida.</p>
+        </div>
         <h3>Barra de herramientas</h3>
-        <p>Ejemplo:</p>
-        <img src="media/sample-4.png" alt="sample-4.png">
-        <p>El usuario dispone de las herramientas:</p>
-        <ul>
-            <li>Documentación</li>
-            <li>Buscar actualizaciones.</li>
-            <li>Ir al directorio de trabajo.</li>
-        </ul>
+        <div class="h3-foo">
+            <p>Ejemplo:</p>
+            <img src="media/sample-4.png" alt="sample-4.png">
+            <p>El usuario dispone de las herramientas:</p>
+            <ul>
+                <li>Documentación</li>
+                <li>Buscar actualizaciones.</li>
+                <li>Ir al directorio de trabajo.</li>
+            </ul>
+        </div>
     </div>
     <script src="assets/script.js"></script>
 </body>
