--- a/index.html
+++ b/index.html
@@ -70,6 +70,21 @@
                 <li>Ir al directorio de trabajo.</li>
             </ul>
         </div>
+        <h3>Características adicionales</h3>
+        <div class="h3-foo">
+            <p>Accesos directos por teclado</p>
+            <ul>
+                <li>Documentación → F1 o Ctrl+H</li>
+                <li>Buscar actualizaciones → F2 o Ctrl+U</li>
+                <li>Abrir directorio de trabajo → F3 o Ctrl+O</li>
+                <li>Seleccionar el directorio de trabajo → F5</li>
+                <li>Leer → Space</li>
+                <li>Procesar → Enter</li>
+                <li>Auto → Ctrl+Enter</li>
+                <li>Limpiar campo ID → F6</li>
+                <li>Limpiar campo Nombre y apellidos → F7</li>
+            </ul>
+        </div>
     </div>
     <script src="assets/script.js"></script>
 </body>
