--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
 </head>
 <body>
     <div id="site">
-        <h1>DeskPy - Documentación</h1>
-        <h2>Nombre del producto: SMART</h2>
-        <h3>Instalación.</h3>
+        <h1>DeskPy Docs</h1>
+        <div id="product-header">
+            <p>Developed by <a href="https://github.com/dgabrielsl" target="_blank" title="DeskPyLab GitHub account">DeskPyLab</a></p>
+            <p>St. Eng. <a href="https://dgabrielsl.github.io/resume/" target="_blank" title="My resume">Gabriel S.</a>, Jr. Software Developer</p>
+            <p>Source code in <a href="https://github.com/dgabrielsl/deskpy_smart" target="_blank" title="Open source repositorie">github.com/dgabrielsl/deskpy_smart"</a></p>
+        </div>
+        <h2>Nombre del producto: SMART File Handler</h2>
+        <h3>Instalación</h3>
         <div class="h3-foo">
             <p>a. Software de distribución libre y "portable" (no requiere instalación), enlace de descarga: LINK.</p>
             <p>b. Por políticas de seguridad del sistema operativo de Windows, al ser un archivo ejecutable, al descargar y ejecutar directamente puede generar la alerta de "Software malicioso", seleccionar la opción de "más información" y "ejecutar de todas formas".</p>
         </div>
-        <h3>Configuración.</h3>
+        <h3>Configuración</h3>
         <div class="h3-foo">
             <p>a. Ejecutar el software o aplicación.</p>
             <p>b. Establecer el directorio de trabajo (carpeta con una o más subcarpetas) con los documentos y nombres claves definidos.</p>
@@ -41,7 +46,7 @@
             <p>*También puede configurar la ruta o directorio de trabajo y pulsar "Auto". Esta opción no permite verificar los datos uno a uno pero hace el proceso más rápido y sencillo, ya que procesa un expediente tras otro hasta completar todos.</p>
             <p>*En la pantalla negra se reportan uno a uno los pasos así como los expedientes trabajados.</p>
         </div>
-        <h3>Manipulación de documentos.</h3>
+        <h3>Manipulación de documentos</h3>
         <div class="h3-foo">
             <p>a. Nombres clave:</p>
             <p>Entrada / Salida</p>
@@ -74,15 +79,15 @@
         <div class="h3-foo">
             <p>Accesos directos por teclado</p>
             <ul>
-                <li>Documentación → F1 o Ctrl+H</li>
-                <li>Buscar actualizaciones → F2 o Ctrl+U</li>
-                <li>Abrir directorio de trabajo → F3 o Ctrl+O</li>
-                <li>Seleccionar el directorio de trabajo → F5</li>
-                <li>Leer → Space</li>
-                <li>Procesar → Enter</li>
-                <li>Auto → Ctrl+Enter</li>
-                <li>Limpiar campo ID → F6</li>
-                <li>Limpiar campo Nombre y apellidos → F7</li>
+                <li>Documentación → <span class="shortcut-key">F1</span> o <span class="shortcut-key">Ctrl+H</span></li>
+                <li>Buscar actualizaciones → <span class="shortcut-key">F2</span> o <span class="shortcut-key">Ctrl+U</span></li>
+                <li>Abrir directorio de trabajo → <span class="shortcut-key">F3</span> o <span class="shortcut-key">Ctrl+O</span></li>
+                <li>Seleccionar el directorio de trabajo → <span class="shortcut-key">F5</span></li>
+                <li>Leer → <span class="shortcut-key">Space</span></li>
+                <li>Procesar → <span class="shortcut-key">Enter</span></li>
+                <li>Auto → <span class="shortcut-key">Ctrl+Enter</span></li>
+                <li>Limpiar campo ID → <span class="shortcut-key">F6</span></li>
+                <li>Limpiar campo Nombre y apellidos → <span class="shortcut-key">F7</span></li>
             </ul>
         </div>
     </div>
